# multiple-auth

./: README.md  pyproject.toml
app/: db.py  main.py  models.py
app/routes/: mfa.py
app/schemas/: mfa.py
app/utils/: totp.py
docs/: Estrutura dos arquivos.docx
